@@ -1,3 +1,9 @@
+2012-09-09  Richard Murray  <murray@altura.local>
+
+	* tests/statefbk_test.py (TestStatefbk.testAcker): unit test
+
+	* src/statefbk.py (acker): added acker() from Roberto Bucher.
+
 2012-08-29  Richard Murray  <murray@altura.local>
 
 	* src/xferfcn.py (TransferFunction._common_den): fixed up code for
